[package]
name = "limestone-program"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "LMSToZQenurAeAutm239hcJBCgsaPNaJhNC7nJhrtdB"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
arrayref = "^0.3"
limestone = { version = "^0", path = "../library" }
shank = "^0.4.2"
solana-program = "~1.18"
